makko/default/szurubooru/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: szurubooru
  labels:
    app: szurubooru
spec:
  replicas: 1
  selector:
    matchLabels:
      app: szurubooru
  template:
    metadata:
      labels:
        app: szurubooru
    spec:
      containers:
      - name: client
        image: szurubooru/client:latest
        volumeMounts:
        - name: data
          mountPath: /data
          readOnly: true
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 20m
            memory: 64Mi
            ephemeral-storage: 16Mi
      - name: server
        image: szurubooru/server:latest
        resources:
          limits:
            cpu: 100m
            memory: 768Mi
            ephemeral-storage: 128Mi
          requests:
            cpu: 20m
            memory: 64Mi
            ephemeral-storage: 16Mi
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config
          mountPath: /opt/app/config.yaml
          subPath: config.yaml
      - name: postgres
        image: postgres:18.6-alpine
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 10m
            memory: 64Mi
            ephemeral-storage: 16Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: szurubooru-data-pvc
      - name: postgres-data
        persistentVolumeClaim:
          claimName: szurubooru-postgres-pvc
      - name: config
        persistentVolumeClaim:
          claimName: szurubooru-config
