makko/default/szurubooru/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: szurubooru-client
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "lumyx.senk0.com"
  rules:
    - backendRefs:
        - name: client
          port: 80
